<?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/backLayout"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="16dp"
            android:layout_marginBottom="56dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_percent="0.05"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline10"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline11"/>
        <TextView
                android:text="@string/categorie"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@id/materialSpinner"
                app:layout_constraintBottom_toBottomOf="@id/materialSpinner"
                android:id="@+id/textView10" tools:layout_editor_absoluteY="32dp"/>

        <fr.ganfra.materialspinner.MaterialSpinner
                app:ms_highlightColor="?attr/colorAccent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:ms_hintColor="#FFF"
                app:ms_baseColor="#FFF"
                app:ms_arrowColor="#FFF"
                android:dropDownWidth="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:id="@+id/materialSpinner"
                app:layout_constraintStart_toEndOf="@+id/guideline11"
                android:layout_marginTop="16dp" android:popupBackground="#FF585858"/>
        <TextView
                android:text="@string/wilaya"
                android:textColor="#fff"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                android:id="@+id/textView11"
                app:layout_constraintBottom_toBottomOf="@id/wilayaSpinner"
                app:layout_constraintTop_toTopOf="@id/wilayaSpinner"
                tools:layout_editor_absoluteY="128dp"/>
        <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/wilayaSpinner"
                app:ms_highlightColor="?attr/colorAccent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:ms_hintColor="#FFF"
                app:ms_baseColor="#FFF"
                app:ms_arrowColor="#FFF"
                android:dropDownWidth="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/guideline11"
                app:layout_constraintTop_toBottomOf="@+id/materialSpinner"
                android:popupBackground="#FF585858"/>

        <View
                android:id="@+id/sperator"
                android:background="#FFF"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/wilayaSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/price"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/rangeLayout"
                app:layout_constraintBottom_toBottomOf="@+id/rangeLayout"
                android:id="@+id/textView12"
                tools:layout_editor_absoluteY="268dp"/>

        <LinearLayout
                android:id="@+id/rangeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/sperator"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/guideline11"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatEditText
                    app:backgroundTint="#FFF"
                    android:hint="@string/max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText1"
                    android:layout_weight="1" android:singleLine="true"
                    android:textColor="#FFF" android:textColorHint="#FFF"/>
            <View
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:background="#FFF"
                    android:layout_width="8dp"
                    android:layout_height="1dp"/>
            <androidx.appcompat.widget.AppCompatEditText
                    app:backgroundTint="#FFF"
                    android:hint="@string/max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:singleLine="true"
                    android:textColor="#FFF"
                    android:textColorHint="#FFF"
                    android:id="@+id/editText2"
                    android:layout_weight="1"/>
        </LinearLayout>
        <TextView
                android:text="@string/min_rating"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                android:id="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/ratingBar2" android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar2"/>
        <RatingBar
                android:isIndicator="false"
                android:numStars="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/rangeLayout" android:id="@+id/ratingBar2"/>

        <TextView
                android:text="@string/promotions"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                android:id="@+id/textView14"
                app:layout_constraintTop_toTopOf="@+id/switch1"
                app:layout_constraintBottom_toBottomOf="@+id/switch1"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:id="@+id/switch1" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar2"/>
        <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/barrier3"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="textView14,switch1" tools:layout_editor_absoluteY="394dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline11"
                app:layout_constraintHorizontal_bias="0.521"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="@+id/barrier3"
                android:text="@string/filter"
                android:textSize="18sp"
                android:textColor="#FFF"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="@+id/barrier3"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                android:textSize="18sp" android:textColor="#FFF"
                android:text="@string/reinitialize"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>